FIX: Comment form fits on smaller devices, reduced padding of record box on smaller devices [t28964]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@17768 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -163,6 +163,12 @@ body {
     #login_box .Question.KeepLoggedIn {
         margin-left: 3px;
     }
+    .CommentFormBody {
+        width: 100%;
+    }
+    .RecordBox {
+        margin: 20px 0 15px 0;
+    }
 }
 @media(max-width:700px) {
     .FormHelp {
